syntax = "proto3";

import "inner_messages.proto";

package PROTO;

message UnionContainerNoUnion {
  oneof msg {
      UnionInnerOne msg1 = 1;
      UnionInnerTwo msg2 = 2;
      UnionInnerThree msg3 = 3;
  }
}